@@ -1,0 +1,105 @@
+; A monophonic version of the Flute preset: a synth flute sound with a couple of
+; tricks: the pitch of the notes decreases slightly when they end, and the mod
+; wheel adds a little embellishment to the beginning of each note. Aftertouch
+; adds more emphasis to the note.
+[js80p]
+MIXctl = 0.55468750
+PMctl = 0.550781250
+MAMPctl = 0.582031250
+MVS = 0.0
+MPRTctl = 0.542968750
+MPRD = 0.50010
+MDTN = 0.822916666666667
+MFINctl = 0.58593750
+MVOL = 0.180
+MF2FRQ = 0.757138003946201
+CAMPctl = 0.582031250
+CVS = 0.0
+CFLD = 0.180
+CPRTctl = 0.542968750
+CPRD = 0.50010
+CDTN = 0.6250
+CFINctl = 0.58593750
+CVOLctl = 0.527343750
+EOG = 0.230
+EF1FRQ = 0.602600033424730
+EF1Q = 0.003333333333333
+EF2FRQctl = 0.531250
+EF2Q = 0.168333333333333
+EEFB = 0.600750750750751
+EEDF = 0.049999999999999
+EEWID = 0.80
+EEHPF = 0.020791699654152
+EEWET = 0.050
+EEDRY = 0.90
+ERRS = 0.930750750750751
+ERDF = 0.074999999999999
+ERDG = 0.733564879133093
+ERWID = 0.150
+ERHPF = 0.020791699654152
+ERWET = 0.0150
+ERDRY = 0.80
+F1INctl = 0.50
+F1MIN = 0.4150
+F1MAX = 0.5850
+F2INctl = 0.003906250
+F2MIN = 0.5050
+F2MAX = 0.5850
+F2AMTctl = 0.50781250
+F2DST = 1.0
+F3INctl = 0.50781250
+F3MIN = 0.350
+F4INctl = 0.003906250
+F4MIN = 0.050
+F5INctl = 0.605468750
+F5MIN = 0.499999999999999
+F5MAX = 0.950
+F6INctl = 0.605468750
+F6MINctl = 0.535156250
+F6MAX = 0.760
+F7INctl = 0.50781250
+F7MIN = 0.670
+F7MAX = 0.750
+F8INctl = 0.503906250
+F8MIN = 0.03750
+F8MAX = 0.00060
+F9INctl = 0.503906250
+F9MIN = 0.030
+F9MAX = 0.0050
+F9DST = 0.30
+N1AMTctl = 0.519531250
+N1ATK = 0.00330
+N1PK = 0.750
+N1HLD = 0.1750
+N1DEC = 0.289935995733049
+N1SUS = 1.0
+N1RELctl = 0.53906250
+N2INI = 0.50
+N2DEL = 0.01380
+N2ATK = 0.002633333333333
+N2PKctl = 0.5156250
+N2HLD = 0.00690
+N2DEC = 0.0010
+N2SUSctl = 0.511718750
+N2RELctl = 0.53906250
+N2FIN = 0.430
+L1FRQ = 0.123011003667889
+L1MIN = 0.030
+L1MAX = 0.049999999999999
+L1AMTctl = 0.52343750
+L2FRQ = 0.123011003667889
+L2MIN = 0.830
+L2AMTctl = 0.52343750
+L2DST = 0.160
+MWAV = 0.888888888888889
+CWAV = 0.555555555555556
+EF1TYP = 0.166666666666667
+EESYN = 1.0
+MF1LOG = 1.0
+MF2LOG = 1.0
+CF1LOG = 1.0
+CF2LOG = 1.0
+EF1LOG = 1.0
+EF2LOG = 1.0
+N2UPD = 1.0
+NH = 0.0
