@@ -35,7 +35,7 @@
 namespace JS80P
 {
 
-size_t const Bank::NUMBER_OF_BUILT_IN_PROGRAMS = 43;
+size_t const Bank::NUMBER_OF_BUILT_IN_PROGRAMS = 44;
 
 Bank::Program const Bank::BUILT_IN_PROGRAMS[] = {
 
@@ -5809,6 +5809,114 @@ Bank::Program const Bank::BUILT_IN_PROGRAMS[] = {
             "F24DSH = 0.666666666666667\n"
             "MFX4 = 1.0\n"
             "CFX4 = 1.0\n"
+        )
+    ),
+
+    Program(
+        "Flute Mono",
+        "Prog044",
+        (
+            "[js80p]\n"
+            "MIXctl = 0.55468750\n"
+            "PMctl = 0.550781250\n"
+            "MAMPctl = 0.582031250\n"
+            "MVS = 0.0\n"
+            "MPRTctl = 0.542968750\n"
+            "MPRD = 0.50010\n"
+            "MDTN = 0.822916666666667\n"
+            "MFINctl = 0.58593750\n"
+            "MVOL = 0.180\n"
+            "MF2FRQ = 0.757138003946201\n"
+            "CAMPctl = 0.582031250\n"
+            "CVS = 0.0\n"
+            "CFLD = 0.180\n"
+            "CPRTctl = 0.542968750\n"
+            "CPRD = 0.50010\n"
+            "CDTN = 0.6250\n"
+            "CFINctl = 0.58593750\n"
+            "CVOLctl = 0.527343750\n"
+            "EOG = 0.230\n"
+            "EF1FRQ = 0.602600033424730\n"
+            "EF1Q = 0.003333333333333\n"
+            "EF2FRQctl = 0.531250\n"
+            "EF2Q = 0.168333333333333\n"
+            "EEFB = 0.600750750750751\n"
+            "EEDF = 0.049999999999999\n"
+            "EEWID = 0.80\n"
+            "EEHPF = 0.020791699654152\n"
+            "EEWET = 0.050\n"
+            "EEDRY = 0.90\n"
+            "ERRS = 0.930750750750751\n"
+            "ERDF = 0.074999999999999\n"
+            "ERDG = 0.733564879133093\n"
+            "ERWID = 0.150\n"
+            "ERHPF = 0.020791699654152\n"
+            "ERWET = 0.0150\n"
+            "ERDRY = 0.80\n"
+            "F1INctl = 0.50\n"
+            "F1MIN = 0.4150\n"
+            "F1MAX = 0.5850\n"
+            "F2INctl = 0.003906250\n"
+            "F2MIN = 0.5050\n"
+            "F2MAX = 0.5850\n"
+            "F2AMTctl = 0.50781250\n"
+            "F2DST = 1.0\n"
+            "F3INctl = 0.50781250\n"
+            "F3MIN = 0.350\n"
+            "F4INctl = 0.003906250\n"
+            "F4MIN = 0.050\n"
+            "F5INctl = 0.605468750\n"
+            "F5MIN = 0.499999999999999\n"
+            "F5MAX = 0.950\n"
+            "F6INctl = 0.605468750\n"
+            "F6MINctl = 0.535156250\n"
+            "F6MAX = 0.760\n"
+            "F7INctl = 0.50781250\n"
+            "F7MIN = 0.670\n"
+            "F7MAX = 0.750\n"
+            "F8INctl = 0.503906250\n"
+            "F8MIN = 0.03750\n"
+            "F8MAX = 0.00060\n"
+            "F9INctl = 0.503906250\n"
+            "F9MIN = 0.030\n"
+            "F9MAX = 0.0050\n"
+            "F9DST = 0.30\n"
+            "N1AMTctl = 0.519531250\n"
+            "N1ATK = 0.00330\n"
+            "N1PK = 0.750\n"
+            "N1HLD = 0.1750\n"
+            "N1DEC = 0.289935995733049\n"
+            "N1SUS = 1.0\n"
+            "N1RELctl = 0.53906250\n"
+            "N2INI = 0.50\n"
+            "N2DEL = 0.01380\n"
+            "N2ATK = 0.002633333333333\n"
+            "N2PKctl = 0.5156250\n"
+            "N2HLD = 0.00690\n"
+            "N2DEC = 0.0010\n"
+            "N2SUSctl = 0.511718750\n"
+            "N2RELctl = 0.53906250\n"
+            "N2FIN = 0.430\n"
+            "L1FRQ = 0.123011003667889\n"
+            "L1MIN = 0.030\n"
+            "L1MAX = 0.049999999999999\n"
+            "L1AMTctl = 0.52343750\n"
+            "L2FRQ = 0.123011003667889\n"
+            "L2MIN = 0.830\n"
+            "L2AMTctl = 0.52343750\n"
+            "L2DST = 0.160\n"
+            "MWAV = 0.888888888888889\n"
+            "CWAV = 0.555555555555556\n"
+            "EF1TYP = 0.166666666666667\n"
+            "EESYN = 1.0\n"
+            "MF1LOG = 1.0\n"
+            "MF2LOG = 1.0\n"
+            "CF1LOG = 1.0\n"
+            "CF2LOG = 1.0\n"
+            "EF1LOG = 1.0\n"
+            "EF2LOG = 1.0\n"
+            "N2UPD = 1.0\n"
+            "NH = 0.0\n"
         )
     ),
 
